showcities api added